<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchesFragment"
    android:background="@color/colorBackground">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kufam_regular"
            android:gravity="center"
            android:text="@string/matches"
            android:textColor="@color/colorAccent"
            android:textSize="72sp" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        tools:layout_editor_absoluteX="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:paddingHorizontal="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/quickMatchButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:divider="@android:color/transparent"
                    android:elevation="10dp"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/quick_join_icon"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/clock_animation" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:padding="20dp"
                            android:text="@string/quick_match"
                            android:textColor="#000000"
                            android:textSize="42sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:divider="@android:color/transparent"
                    android:elevation="10dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/join_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:paddingVertical="20dp"
                            android:paddingHorizontal="10dp"
                            android:text="@string/join"
                            android:textColor="#000000"
                            android:textSize="35sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:divider="@android:color/transparent"
                    android:elevation="10dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/create_icon" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="20dp"
                            android:text="@string/create_room"
                            android:textColor="#000000"
                            android:textSize="35sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>